--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/comforter-brush": "^4.5.5",
+    "@fontsource/roboto-mono": "^4.5.5",
     "framer-motion": "^6.2.10",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "react-slideshow-image": "^3.7.3"
   },
   "devDependencies": {
     "eslint": "8.13.0",
