--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/comforter-brush": "^4.5.5",
     "@fontsource/roboto-mono": "^4.5.5",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.2.10",
     "next": "12.1.5",
     "react": "18.0.0",
